[package]
name = "rustql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.6"
deadpool-postgres = "0.10.2"
warp = "0.3.2"
juniper = "0.15.9"
juniper_warp = "0.7.0"
refinery = { version = "0.8", features = ["tokio-postgres"]}
dataloader = { version = "0.15", default-features = false, features = ["runtime-tokio"]}
futures = "0.3"
async-trait = "0.1"
